upd ParCoords: fixed fonts in select, fixed 'reset clusters', made numbers in the table more human-readable

--- a/core/static/css/ParallelCoordinates.css
+++ b/core/static/css/ParallelCoordinates.css
@@ -46,3 +46,7 @@ mark {
 .table-selected-line {
     background: #ddd !important;
 }
+
+.select2-container, .select2-choice, .select2-results__option {
+    font-size: 12px !important;
+}
